# RawGUI

./: CLAUDE.md  CONTINUATION_GUIDE.md  GOAL.md  JAVASCRIPT_AND_CSS_PLAN.md  README.md  SESSION_SUMMARY.md  demo_dialog_shadow.py  plan.md  pyproject.toml
examples/: counter.py  form.py  hello_world.py  native_widget_demo.py
rawgui/: __init__.py  app.py  client.py  compat.py  config.py  constants.py  context.py  css_tailwind.py  dom.py  element.py  functions.py  main.py  mixins.py  page.py  run.py  slot.py  ui.py
rawgui/adapters/: __init__.py  base.py  tkinter_adapter.py
rawgui/elements/: __init__.py  button.py  card.py  chat.py  checkbox.py  column.py  dialog.py  image.py  input.py  label.py  layout.py  link.py  menu.py  native_widget.py  navbar.py  number.py  progress.py  radio.py  row.py  scroll.py  select.py  separator.py  slider.py  table.py  tabs.py  textarea.py  toggle.py  tooltip.py  tree.py
rawgui/renderer/: __init__.py  dom.py  layers.py  layout.py  styles.py  terminal.py
rawgui/testing/: __init__.py  screenshots.py  subprocess_terminal.py  user.py
tests/: __init__.py  test_checkbox.py  test_click_screenshots.py  test_dialog_shadow.py  test_elements.py  test_integration.py  test_new_components.py  test_rendering.py  test_subprocess_terminal.py  test_tab_navigation.py  test_user_interaction.py
tmp/: debug_run.py  test_blessed_input.py
tmp/samples/: debug_input.py  run.py  simple.py  test_input.py
